k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: __NAMESPACE__
spec:
  replicas: 1
  selector:
    matchLabels:
      name: hello-world
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: hello-world
    spec:
      containers:
      - image: amioranza/go-hello-world:latest
        name: hello-world
        ports:
        - containerPort: 8080
