k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: __NAMESPACE__
spec:
  ports:
  - name: "http"
    port: 8080
    targetPort: 8080
  selector:
    name: hello-world
